# devicons-python

./: pyproject.toml  readme.md
devicons/: __init__.py
